2010-06-30  Dan Nicolaescu  <dann@ics.uci.edu>

	Avoid displaying files with a nil state in vc-dir.
	* vc-dir.el (vc-dir-update): Obey the noinsert argument in all
	cases that cause insertion.
	(vc-dir-resynch-file): Tell vc-dir-update to avoid inserting files
	with a nil state.

2010-06-30  Chong Yidong  <cyd@stupidchicken.com>

	* xml.el (xml-parse-region): Avoid infloop (Bug#5281).

2010-06-29  Leo  <sdl.web@gmail.com>

	* emacs-lisp/rx.el (rx): Doc fix.  (Bug#6537)

2010-06-27  Oleksandr Gavenko  <gavenkoa@gmail.com>  (tiny change)

	* generic-x.el (bat-generic-mode): Fix regexp for command line
	switches (Bug#5719).

2010-06-27  Masatake YAMATO  <yamato@redhat.com>

	* htmlfontify.el (hfy-face-attr-for-class): Use append instead
	of nconc to avoid pure storage error (Bug#6239).

2010-06-27  Christoph  <cschol2112@googlemail.com>  (tiny change)

	* bookmark.el (bookmark-bmenu-2-window, bookmark-bmenu-other-window)
	(bookmark-bmenu-other-window-with-mouse): Remove unnecessary
	bindings of bookmark-automatically-show-annotations (Bug#6515).

2010-06-25  Eli Zaretskii  <eliz@gnu.org>

	* arc-mode.el (archive-zip-extract): Don't quote the file name on
	MS-Windows and MS-DOS.  (Bug#6467, Bug#6144)

2010-06-24  Štěpán Němec  <stepnem@gmail.com>  (tiny change)

	* comint.el (make-comint, make-comint-in-buffer): Mention return
	value in the docstrings.  (Bug#6498)

2010-06-24  Yoni Rabkin  <yoni@rabkins.net>

	* bs.el (bs-mode-font-lock-keywords): Remove "by" from Dired pattern,
	since it is not present when using some non-default switches.

2010-06-23  Karl Fogel  <kfogel@red-bean.com>

	* simple.el (compose-mail): Fix doc string to refer to
	`compose-mail-user-agent-warnings', instead of to the
	nonexistent `compose-mail-check-user-agent'.

2010-06-22  Dan Nicolaescu  <dann@ics.uci.edu>

	Fix vc-annotate for renamed files when using Git.
	* vc-git.el (vc-git-find-revision): Deal with empty results from